<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainXML"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/escenariocreacion"
    tools:context=".CreacionPersonajeActivity">


    <ImageView
        android:id="@+id/imagen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/botonCrearPersonaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreEditText" />

    <Button
        android:id="@+id/botonCrearPersonaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#6B8096"
        android:gravity="center"
        android:stateListAnimator="@android:anim/accelerate_interpolator"
        android:text="@string/CrearPersonaje"
        android:textColor="#404040"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nombreEditText"
        android:layout_width="@dimen/activityMainCompWidth"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/bordemarcos"
        android:gravity="center"
        android:hint="@string/HintTextNombre"
        android:inputType="text"
        android:textColor="#404040"
        android:textColorHint="#404040"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bordemarcos"
        android:gravity="center"
        android:orientation="vertical"
        android:outlineAmbientShadowColor="#3D4D5C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="@dimen/activityMainCompWidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/TextViewRaza"
            android:textColor="#404040"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerRaza"
            style="@android:style/Widget.Spinner"
            android:layout_width="@dimen/SpinnerTamWidth"
            android:layout_height="@dimen/SpinnerTamHeigh"
            android:layout_marginTop="5dp"
            android:entries="@array/spinnerRaza" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="@dimen/activityMainCompWidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/TextViewClase"
            android:textColor="#404040"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerClase"
            style="@android:style/Widget.Spinner"
            android:layout_width="@dimen/SpinnerTamWidth"
            android:layout_height="@dimen/SpinnerTamHeigh"
            android:layout_marginTop="5dp"
            android:entries="@array/spinnerClase" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="@dimen/activityMainCompWidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"

            android:text="@string/TextViewEstadoVital"
            android:textColor="#404040"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerEstadoVital"
            style="@android:style/Widget.Spinner"
            android:layout_width="@dimen/SpinnerTamWidth"
            android:layout_height="@dimen/SpinnerTamHeigh"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"

            android:entries="@array/spinnerEstadoVital" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>