<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ChatBotActivity">

    <LinearLayout
        android:id="@+id/eleccion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/elige_con_quien_quieres_hablar"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/humano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@mipmap/imgpruebaa"
                tools:srcCompat="@mipmap/imgpruebaa" />

            <ImageView
                android:id="@+id/elfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@mipmap/imgpruebaa"
                tools:srcCompat="@mipmap/imgpruebaa" />

            <ImageView
                android:id="@+id/enano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@mipmap/imgpruebaa"
                tools:srcCompat="@mipmap/imgpruebaa" />

            <ImageView
                android:id="@+id/maldito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@mipmap/imgpruebaa"
                tools:srcCompat="@mipmap/imgpruebaa" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMessages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingVertical="8dp" />

        <EditText
            android:id="@+id/msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="128dp"
            android:hint="@string/escribe_un_mensaje"
            android:padding="8dp" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/msg"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:text="@string/enviar" />

    </RelativeLayout>

</LinearLayout>